order and payment logics implemented